Aula - CSS II: Criando estilos

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header>
         <nav>
             <ul>
-                <li>Pacotes</li>
-                <li>Taxa</li>
-                <li>Contato</li>
+                <li><a href="">Pacotes</a></li>
+                <li><a href="">Taxa</a></li>
+                <li><a href="">Contato</a></li>
             </ul>
         </nav>
         <h1>Venha realizar a viagem dos seus sonhos</h1>
     </header>
-    <section>
+    <section id="pacotes">
         <h2>Conheça nossos pacotes!</h2>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vulputate velit libero, sit amet pharetra augue viverra at. Donec eget nunc eu tellus ultricies fringilla nec nec elit. Curabitur a diam dui. Praesent id aliquam ligula. Nulla a massa eu mauris sodales tincidunt. Ut a risus sodales, vulputate sem interdum, laoreet mauris. Curabitur sit amet massa congue urna mollis volutpat. Sed blandit justo quis enim vehicula pulvinar. Suspendisse potenti. Curabitur placerat massa gravida consequat molestie. 
@@ -25,28 +25,32 @@
             <a href="https://www.lipsum.com/">Link</a>
             <hr> <!-- Linha separadora -->
         </p>
-        <figure>
-            <img src="img\nossos-pacotes\gramado.jpeg" alt="Imagem de chalé em gramado" >
-            <figcaption>Gramado</figcaption> <!-- Legenda da imagem -->
-        </figure>
-        <figure>
-            <img src="img/nossos-pacotes/porto-seguro.jpeg" alt="Imagem de Porto Seguro">
-            <figcaption>Porto Seguro</figcaption>
-        </figure>
-        <figure>
-            <img src="img/nossos-pacotes/rio-de-janeiro.jpeg" alt="Imagem do Rio de Janeiro">
-            <figcaption>Rio de Janeiro</figcaption>
-        </figure>
-        <video controls width="500px">
-            <source src="video/rabbit320.mp4" type="video/mp4">
-            <source src="video/rabbit320.webm" type="video/webm">
-            Seu navegador não suporta o formato do video. <a href="video/rabbit320.mp4">Clique aqui para abaixar</a>
-        </video>
+        <div class="figuras">
+            <figure>
+                <img src="img\nossos-pacotes\gramado.jpeg" alt="Imagem de chalé em gramado" >
+                <figcaption>Gramado</figcaption> <!-- Legenda da imagem -->
+            </figure>
+            <figure>
+                <img src="img/nossos-pacotes/porto-seguro.jpeg" alt="Imagem de Porto Seguro">
+                <figcaption>Porto Seguro</figcaption>
+            </figure>
+            <figure>
+                <img src="img/nossos-pacotes/rio-de-janeiro.jpeg" alt="Imagem do Rio de Janeiro">
+                <figcaption>Rio de Janeiro</figcaption>
+            </figure>
+        </div>
+        <div class="videos">
+            <video controls width="500px">
+                <source src="video/rabbit320.mp4" type="video/mp4">
+                <source src="video/rabbit320.webm" type="video/webm">
+                Seu navegador não suporta o formato do video. <a href="video/rabbit320.mp4">Clique aqui para abaixar</a>
+            </video>
+        </div>
     </section>
     <section>
         <h2>Taxas e serviços</h2>
         <p>Veja nossas taxas para os serviços</p>
-        <table border>
+        <table>
             <caption>Descrição dos serviços e valores</caption>
             <thead>
                 <tr>
