--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viagem dos sonhos</title>
+    <title href="index.html">Viagem dos sonhos</title>
 </head>
 
 <body>
     <header class="container-fluid p-2 bg-warning text-center p-2">
+
         <nav class="navbar navbar-expand-lg bg-warning">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">VIAGEM DOS SONHOS</a>
+                <a class="navbar-brand" href="index.html">VIAGEM DOS SONHOS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -42,39 +44,110 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="checkout.html"><i class="bi bi-bag-check"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <h1>Venha realizar a viagem dos seus sonhos</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce suscipit magna enim, vel lacinia ante aliquam
-            non. Etiam ex lacus, posuere vel lobortis ac, vulputate vel enim</p>
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner slide">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="2"></button>
+                </div>
+                <div class="carousel-item active" data-bs-interval="5000">
+                    <img src="img/carousel/amazonas.jpg" class="d-block w-100" alt="amazonas">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Venha conecer nossos planos</h5>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="5000">
+                    <img src="img/carousel/angra.jpg" class="d-block w-100" alt="angra">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>De norte a sul</h5>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="5000" >
+                    <img src="img/carousel/cataratas-iguacu.jpg" class="d-block w-100" alt="cataratas-iguacu">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>A sua viagem perfeita!</h5>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </header>
     <section id="pacotes" class="container-fluid bg-light text-center p-2">
         <h2>Conheça nossos pacotes!</h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vulputate velit libero, sit amet pharetra augue
-            viverra at. Donec eget nunc eu tellus ultricies fringilla nec nec elit. Curabitur a diam dui. Praesent id
-            aliquam ligula. Nulla a massa eu mauris sodales tincidunt. Ut a risus sodales, vulputate sem interdum,
-            laoreet mauris. Curabitur sit amet massa congue urna mollis volutpat. Sed blandit justo quis enim vehicula
-            pulvinar. Suspendisse potenti. Curabitur placerat massa gravida consequat molestie.
+            Lorem ipsum dolor sit amet,
             <br><br> <!-- Nova linha 2x -->
             <a href="https://www.lipsum.com/">Link</a>
             <hr> <!-- Linha separadora -->
         </p>
-        <div class="row">
-            <figure class="col text-center">
-                <img src="img/nossos-pacotes/gramado.jpeg" alt="Imagem de chalé em gramado">
-                <figcaption>Gramado</figcaption> <!-- Legenda da imagem -->
-            </figure>
-            <figure class="col text-center">
-                <img src="img/nossos-pacotes/porto-seguro.jpeg" alt="Imagem de Porto Seguro">
-                <figcaption>Porto Seguro</figcaption>
-            </figure>
-            <figure class="col text-center">
-                <img src="img/nossos-pacotes/rio-de-janeiro.jpeg" alt="Imagem do Rio de Janeiro">
-                <figcaption>Rio de Janeiro</figcaption>
-            </figure>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="img/nossos-pacotes/gramado.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body bg-warning">
+                        <h5 class="card-title">Gramado</h5>
+                        <h1 class="card-subtitle text-muted">R$ 5.000,00</h1>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                    </div>
+                    <a href="" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">Reservar</a>
+                    <div class="card-footer">
+                        <small class="text-body-secondary">Em até 24x</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="img/nossos-pacotes/porto-seguro.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body bg-warning">
+                        <h5 class="card-title">Porto Seguro</h5>
+                        <h1 class="card-subtitle text-muted">R$ 4.000,00</h1>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                    </div>
+                    <a href="" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">Reservar</a>
+                    <div class="card-footer">
+                        <small class="text-body-secondary">Em até 24x</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="img/nossos-pacotes/rio-de-janeiro.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body bg-warning">
+                        <h5 class="card-title">Rio de Janeiro</h5>
+                        <h1 class="card-subtitle text-muted">R$ 2.000,00</h1>
+
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This card has even longer content than the first to show that equal
+                            height action.</p>
+                    </div>
+                    <a href="" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">Reservar</a>
+                    <div class="card-footer">
+                        <small class="text-body-secondary">Em até 24x</small>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section id="taxaseservicos" class="contianer-fluid bg-warning text-center p-2">
@@ -124,7 +197,8 @@
 
                 <div class="mb-3">
                     <label class="form-label" for="email">Email</label><br>
-                    <input type="email" class="form-control" name="email" placeholder="exemplo@domain.com" required id="email">
+                    <input type="email" class="form-control" name="email" placeholder="exemplo@domain.com" required
+                        id="email">
                 </div>
 
                 <div class="mb-3">
@@ -135,7 +209,7 @@
                 <div class="mb-3">
                     <label class="form-label" for="dataVolta">Data de volta</label><br>
                     <input type="date" class="form-control" name="dataVolta" id="dataVolta">
-                </div>  
+                </div>
             </fieldset>
 
             <!-- 
@@ -146,18 +220,21 @@
             <fieldset>
                 <legend>Quais serviços deseja contratar</legend>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" name="passagens" value="Passagens" id="compraPassagens">
+                    <input type="checkbox" class="form-check-input" name="passagens" value="Passagens"
+                        id="compraPassagens">
                     <label class="form-check-label" for="compraPassagens">Compra de passagens</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" name="hospedagem" value="Hospedagem" id="reservaHospedagem">
+                    <input type="checkbox" class="form-check-input" name="hospedagem" value="Hospedagem"
+                        id="reservaHospedagem">
                     <label class="form-check-label" for="reservaHospedagem">Reserva de hospedagem</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" name="veiculos" class="form-check-input" value="Veiculos" id="reservaVeiculos">
+                    <input type="checkbox" name="veiculos" class="form-check-input" value="Veiculos"
+                        id="reservaVeiculos">
                     <label class="form-check-label" for="reservaVeiculos">Reserva de veículos</label>
                 </div>
-                
+
             </fieldset>
             <label>Comentário</label><br>
             <textarea rows="5" nome="Comentário"></textarea><br><br>
@@ -172,5 +249,22 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
 </body>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Suas compras</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Produto adicionado ao carrinho
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" data-bs-dismiss="modal">Continuar comprando</button>
+                <a href="checkout.html" type="button" class="btn btn-primary">Finalizar compra</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 </html>
